Add routes to events-app.component

--- a/ng2-fundamentals/app/events/event-thumbnail.component.html
+++ b/ng2-fundamentals/app/events/event-thumbnail.component.html
@@ -2,7 +2,7 @@
   <h2> {{event.name}} </h2>
   <div>Date: {{event.date}}</div>
   <div>Time: {{event.time}}</div>
-  <div>Price: \${{event.price}}</div>
+  <div>Price: ${{event.price}}</div>
   <div>
     <span>Location: {{event.location.address}}</span>
     <span>&nbsp;</span>
