--- a/ng2-fundamentals/app/events/event-thumbnail.component.html
+++ b/ng2-fundamentals/app/events/event-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="well hoverwell thumbnail">
+<div [routerLink]="['/events', event.id]" class="well hoverwell thumbnail">
   <h2> {{event.name}} </h2>
   <div>Date: {{event.date}}</div>
   <div>Time: {{event.time}}</div>
