addd code sever

--- a/Oceanalytics/Demo-angular2/src/app/server/server.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/server/server.component.html
@@ -43,14 +43,13 @@
                 <th>Measure topics</th>
                 <th style="width: 40px">code</th>
               </tr>
-              <!--<tr>-->
-                <!--<td ng-bind="$index"></td>-->
-                <!--<td ng-bind="record.key"></td>-->
-                <!--<td ng-bind="record.value.kafkaTopicName || record.value.pump">-->
-                <!--<td ng-bind="record.topic">-->
-                <!--</td>-->
-                <!--<td><span class="badge bg-red" ng-bind="record.value.time"></span></td>-->
-              <!--</tr>-->
+              <tr *ngFor="let record of records; let i = index" [attr.data-index] ="i">
+                <td>{{i}}</td>
+                <td>{{record.key}}</td>
+                <td>{{record.value.kafkaTopicName || record.value.pump}}</td>
+                <td>{{record.topic}}</td>
+                <td><span class="badge bg-red">{{record.value.time}}</span></td>
+              </tr>
             </table>
           </div>
           <!-- /.box-body -->
