--- a/Oceanalytics/Demo-angular2/src/app/app.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/app.component.html
@@ -21,7 +21,7 @@
           <img src="./assets/css/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p ng-bind="instanceName"></p>
+          <p [innerHtml]="instanceName"></p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
