--- a/Oceanalytics/Demo-angular2/src/app/app.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/app.component.html
@@ -1,34 +1,9 @@
-<div class="wrapper">
-  <header class="main-header">
-    <!-- Logo -->
-    <a href="/" class="logo">
-      <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>OCeana</b></span>
-      <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Oceanalytics</b></span>
-    </a>
-  </header>
+<div class="wrapper" style="background-color: white">
+
 
   <!-- =============================================== -->
 
-  <!-- Left side column. contains the sidebar -->
-  <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      <!-- Sidebar user panel -->
-      <div class="user-panel">
-        <div class="pull-left image">
-          <img src="./assets/css/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-          <p [innerHtml]="instanceName"></p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
-      </div>
-      <!-- search form -->
-    </section>
-    <!-- /.sidebar -->
-  </aside>
+
 
   <!-- =============================================== -->
 
