--- a/Oceanalytics/Demo-angular2/src/app/client/client.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/client/client.component.html
@@ -1,30 +1,10 @@
-<div class="content-wrapper">
-  <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      Client page
-      <small>it all starts here</small>
-    </h1>
-    <ol class="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li class="active">Client Records</li>
-    </ol>
-  </section>
-
-  <!-- Main content -->
-  <section class="content">
+<!-- Main content -->
+<section class="content">
     <!-- Default box -->
     <div class="box">
       <div class="box-header with-border">
         <h3 class="box-title">Client Progress</h3>
-        <span [innerHtml]="instanceName"></span>
 
-        <div class="box-tools pull-right">
-          <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-            <i class="fa fa-minus"></i></button>
-          <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-            <i class="fa fa-times"></i></button>
-        </div>
       </div>
       <div class="box-body">
         <form role="form">
@@ -33,24 +13,13 @@
             <label>Measure topics</label>
             <ng-select
               [options]="options"
-              [multiple]="false"
+              [multiple]="true"
               placeholder="Select multiple"
               (opened)="onMultipleOpened()"
               (closed)="onMultipleClosed()"
               (selected)="onMultipleSelected($event)"
               (deselected)="onMultipleDeselected($event)">
             </ng-select>
-            <!--<select  class="form-control" [(ngModel)]="measuresStream">-->
-              <!--<option [ngValue]="AgentPerformanceRealTimeMeasures">Agent Performance real-time measures</option>-->
-              <!--<option [ngValue]="AgentByAccountRealTimeMeasures">Agent by Account real-time measures</option>-->
-              <!--<option [ngValue]="AgentByRoutingServiceRealRimeMeasures">Agent By Routing Service real-time measures</option>-->
-              <!--<option [ngValue]="RoutingServiceRealTimeMeasures">Routing Service real-time measures</option>-->
-              <!--<option [ngValue]="AgentIntervalMovingWindowRealTimeMeasures">Agent Interval Moving Window real-time measures</option>-->
-              <!--<option [ngValue]="AgentByAccountIntervalMovingWindowRealTimeMeasures-->
-                        <!--">Agent By Account Interval Moving Window real-time measures </option>-->
-              <!--<option [ngValue]="AgentByRoutingServiceMovingWindowRealTimeMeasures">Agent By Routing Service Moving Window real-time measures</option>-->
-              <!--<option [ngValue]="RoutingServiceMovingWindowRealTimeMeasures">Routing Service Moving Window real-time measures</option>-->
-            <!--</select>-->
           </div>
           <button type="submit" class="btn btn-primary" (click)="addRecord('RSR', input)">Submit</button>
 
@@ -58,35 +27,258 @@
         <div class="box" style="margin-top: 30px;">
           <div class="box-header">
             <h3 class="box-title">Received Messages</h3>
-            <span class="badge bg-red" ng-bind="status"></span>
           </div>
           <!-- /.box-header -->
           <div class="box-body no-padding">
-            <table class="table table-condensed">
-              <tr>
-                <th style="width: 10px">#</th>
-                <th>Instance Name</th>
-                <th>Task</th>
-                <th>Measure topics</th>
-                <th style="width: 40px">code</th>
-              </tr>
-              <tr *ngFor="let item of messages">
-                <td ng-bind="$index"></td>
-                <td ng-bind="item.key"></td>
-                <td ng-bind="item.value.kafkaTopicName">
-                <td ng-bind="item.topic">
-                </td>
-                <td><span class="badge bg-red" ng-bind="item.value.time"></span></td>
-              </tr>
-            </table>
+
+
+
+            <div class="row">
+              <div class="col-md-12">
+                <!-- Custom Tabs -->
+                <div class="nav-tabs-custom">
+                  <ul class="nav nav-tabs">
+                    <li class="active" [hidden]="!messages.Realtimesubscriptionrequest.length"><a href="#tab_1" data-toggle="tab">Realtimesubscriptionrequest</a></li>
+                    <li><a href="#tab_2" data-toggle="tab" [hidden]="!messages.Realtimesubscriptionresponse.length">Realtimesubscriptionresponse</a></li>
+                    <li><a href="#tab_3" data-toggle="tab" [hidden]="messages.Realtimemeasurespumpuprequest.length == 0">Realtimemeasurespumpuprequest</a></li>
+                    <li><a href="#tab_4" data-toggle="tab" [hidden]="messages.SoDagentmeasuresproducer.length == 0">SoDagentmeasuresproducer</a></li>
+                    <li><a href="#tab_5" data-toggle="tab" [hidden]="messages.SoDagentbyaccountmeasuresproducer.length == 0">SoDagentbyaccountmeasuresproducer</a></li>
+                    <li><a href="#tab_6" data-toggle="tab" [hidden]="messages.SoDroutingservicemeasuresproducer.length == 0">SoDroutingservicemeasuresproducer</a></li>
+                    <li><a href="#tab_7" data-toggle="tab" [hidden]="messages.servermeasurespumpuprequest.length == 0">servermeasurespumpuprequest</a></li>
+                    <li><a href="#tab_8" data-toggle="tab" [hidden]="messages.MWagentmeasuresproducer.length == 0">MWagentmeasuresproducer</a></li>
+                    <li><a href="#tab_9" data-toggle="tab" [hidden]="messages.MWagentbyaccountmeasuresproducer.length == 0">MWagentbyaccountmeasuresproducer</a></li>
+                    <li><a href="#tab_10" data-toggle="tab" [hidden]="messages.MWroutingservicemeasuresproducer.length == 0">MWroutingservicemeasuresproducer</a></li>
+                    <li><a href="#tab_11" data-toggle="tab" [hidden]="messages.MWagentbyroutingservicemeasuresproducer.length == 0">MWagentbyroutingservicemeasuresproducer</a></li>
+                  </ul>
+                  <div class="tab-content">
+                    <div class="tab-pane active" id="tab_1">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.Realtimesubscriptionrequest">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <!-- /.tab-pane -->
+                    <div class="tab-pane" id="tab_2">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.Realtimesubscriptionresponse">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <!-- /.tab-pane -->
+                    <div class="tab-pane" id="tab_3">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.Realtimemeasurespumpuprequest">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_4">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.SoDagentmeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_5">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.SoDagentbyaccountmeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_6">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.SoDroutingservicemeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_7">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.servermeasurespumpuprequest">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_8">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.MWagentmeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_9">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.MWagentbyaccountmeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_10">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.MWroutingservicemeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="tab-pane" id="tab_11">
+                      <table class="table table-condensed">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Instance Name</th>
+                          <th>Task</th>
+                          <th>Measure topics</th>
+                          <th style="width: 40px">code</th>
+                        </tr>
+                        <tr *ngFor="let item of messages.MWagentbyroutingservicemeasuresproducer">
+                          <td [innerHtml]="$index"></td>
+                          <td [innerHtml]="item.key"></td>
+                          <td [innerHtml]="item.value.kafkaTopicName">
+                          <td [innerHtml]="item.topic">
+                          </td>
+                          <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <!-- /.tab-pane -->
+                  </div>
+                  <!-- /.tab-content -->
+                </div>
+                <!-- nav-tabs-custom -->
+              </div>
+              <!-- /.col -->
+            </div>
           </div>
           <!-- /.box-body -->
+
+
         </div>
       </div>
     </div>
     <!-- /.box -->
 
   </section>
-  <!-- /.content -->
-</div>
-<!-- /.content-wrapper -->
+<!-- /.content -->
+
